cmake_minimum_required(VERSION 3.10)

project(Nowcoder)

set(CMAKE_CXX_STANDARD 11)

include_directories(.)

add_executable(Nowcoder
               config.h
               main.cpp
        Nowcoder001/Nowcoder001.cpp Nowcoder001/Nowcoder001.h
        Nowcoder002/Nowcoder002.cpp Nowcoder002/Nowcoder002.h
        Nowcoder003/Nowcoder003.cpp Nowcoder003/Nowcoder003.h
        Nowcoder004/Nowcoder004.cpp Nowcoder004/Nowcoder004.h
        Nowcoder005/Nowcoder005.cpp Nowcoder005/Nowcoder005.h
        Nowcoder006/Nowcoder006.cpp Nowcoder006/Nowcoder006.h
        Nowcoder007/Nowcoder007.cpp Nowcoder007/Nowcoder007.h
        Nowcoder008/Nowcoder008.cpp Nowcoder008/Nowcoder008.h
        Nowcoder009/Nowcoder009.cpp Nowcoder009/Nowcoder009.h
        Nowcoder010/Nowcoder010.cpp Nowcoder010/Nowcoder010.h
        Nowcoder011/Nowcoder011.cpp Nowcoder011/Nowcoder011.h
        Nowcoder012/Nowcoder012.cpp Nowcoder012/Nowcoder012.h
        Nowcoder013/Nowcoder013.cpp Nowcoder013/Nowcoder013.h
        Nowcoder014/Nowcoder014.cpp Nowcoder014/Nowcoder014.h
        Nowcoder015/Nowcoder015.cpp Nowcoder015/Nowcoder015.h
        Nowcoder016/Nowcoder016.cpp Nowcoder016/Nowcoder016.h
        Nowcoder017/Nowcoder017.cpp Nowcoder017/Nowcoder017.h
        Nowcoder018/Nowcoder018.cpp Nowcoder018/Nowcoder018.h
        Nowcoder019/Nowcoder019.cpp Nowcoder019/Nowcoder019.h
        Nowcoder020/Nowcoder020.cpp Nowcoder020/Nowcoder020.h
        Nowcoder021/Nowcoder021.cpp Nowcoder021/Nowcoder021.h
        Nowcoder022/Nowcoder022.cpp Nowcoder022/Nowcoder022.h
        Nowcoder023/Nowcoder023.cpp Nowcoder023/Nowcoder023.h
        Nowcoder024/Nowcoder024.cpp Nowcoder024/Nowcoder024.h
        Nowcoder025/Nowcoder025.cpp Nowcoder025/Nowcoder025.h 
        Nowcoder026/Nowcoder026.cpp Nowcoder026/Nowcoder026.h 
        Nowcoder027/Nowcoder027.cpp Nowcoder027/Nowcoder027.h 
        Nowcoder028/Nowcoder028.cpp Nowcoder028/Nowcoder028.h 
        Nowcoder029/Nowcoder029.cpp Nowcoder029/Nowcoder029.h 
        Nowcoder030/Nowcoder030.cpp Nowcoder030/Nowcoder030.h 
        Nowcoder031/Nowcoder031.cpp Nowcoder031/Nowcoder031.h 
        Nowcoder032/Nowcoder032.cpp Nowcoder032/Nowcoder032.h 
        Nowcoder033/Nowcoder033.cpp Nowcoder033/Nowcoder033.h 
        Nowcoder034/Nowcoder034.cpp Nowcoder034/Nowcoder034.h 
        Nowcoder035/Nowcoder035.cpp Nowcoder035/Nowcoder035.h 
        Nowcoder036/Nowcoder036.cpp Nowcoder036/Nowcoder036.h 
        Nowcoder037/Nowcoder037.cpp Nowcoder037/Nowcoder037.h 
        Nowcoder038/Nowcoder038.cpp Nowcoder038/Nowcoder038.h 
        Nowcoder039/Nowcoder039.cpp Nowcoder039/Nowcoder039.h 
        Nowcoder040/Nowcoder040.cpp Nowcoder040/Nowcoder040.h 
        Nowcoder041/Nowcoder041.cpp Nowcoder041/Nowcoder041.h
        Nowcoder042/Nowcoder042.cpp Nowcoder042/Nowcoder042.h
        Nowcoder043/Nowcoder043.cpp Nowcoder043/Nowcoder043.h
        Nowcoder044/Nowcoder044.cpp Nowcoder044/Nowcoder044.h
        Nowcoder045/Nowcoder045.cpp Nowcoder045/Nowcoder045.h
        Nowcoder046/Nowcoder046.cpp Nowcoder046/Nowcoder046.h
        Nowcoder047/Nowcoder047.cpp Nowcoder047/Nowcoder047.h
        Nowcoder048/Nowcoder048.cpp Nowcoder048/Nowcoder048.h
        Nowcoder049/Nowcoder049.cpp Nowcoder049/Nowcoder049.h
        Nowcoder050/Nowcoder050.cpp Nowcoder050/Nowcoder050.h
        Nowcoder051/Nowcoder051.cpp Nowcoder051/Nowcoder051.h
        Nowcoder052/Nowcoder052.cpp Nowcoder052/Nowcoder052.h
        Nowcoder053/Nowcoder053.cpp Nowcoder053/Nowcoder053.h
        Nowcoder054/Nowcoder054.cpp Nowcoder054/Nowcoder054.h
        Nowcoder055/Nowcoder055.cpp Nowcoder055/Nowcoder055.h
        Nowcoder056/Nowcoder056.cpp Nowcoder056/Nowcoder056.h
        Nowcoder057/Nowcoder057.cpp Nowcoder057/Nowcoder057.h
        Nowcoder058/Nowcoder058.cpp Nowcoder058/Nowcoder058.h
        Nowcoder059/Nowcoder059.cpp Nowcoder059/Nowcoder059.h
        Nowcoder060/Nowcoder060.cpp Nowcoder060/Nowcoder060.h
        Nowcoder061/Nowcoder061.cpp Nowcoder061/Nowcoder061.h
        Nowcoder062/Nowcoder062.cpp Nowcoder062/Nowcoder062.h
        Nowcoder063/Nowcoder063.cpp Nowcoder063/Nowcoder063.h
        Nowcoder064/Nowcoder064.cpp Nowcoder064/Nowcoder064.h
        Nowcoder065/Nowcoder065.cpp Nowcoder065/Nowcoder065.h
        Nowcoder066/Nowcoder066.cpp Nowcoder066/Nowcoder066.h
        Nowcoder067/Nowcoder067.cpp Nowcoder067/Nowcoder067.h)